[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/BaseHero.gd" type="Script" id=2]

[node name="BaseHero" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 3.0625 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 64.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
